2012-08-08  Kirit Saelensminde  <kirit@felspar.com>
 The parser lock is now recursive. This means that we can be more aggressive about using it without causing deadlocks. Also removed the parser wrapper that doesn't take a lock so all uses are explicitly forced to acquire the lock at the right time.

2012-08-04  Kirit Saelensminde  <kirit@felspar.com>
 Deliberately leak the thread counter so that it can't be destructed before threads that are terminating in a global destructor get run.

2012-08-03  Kirit Saelensminde  <kirit@felspar.com>
 Added instrumentation for the number of worker threads in use. Also added decrement to the counter implementation.
 Fixed a bug on Windows where the pre-increment would return the old value rather than the new one.
 Dynamic loading of a library now tries with platform specific prefixes and suffixes before trying the name provided.

2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
 Implement JSON casts for json::array_t and json::object_t.
 Allow the use of constant workers (and in_proc) which makes certain thread wrappers more obvious to implement.
 Implement futures with void type for worker and in_proc. We can still wait on them.
 Added startswith and endswith members to the string class.

2012-07-22  Kirit Saelensminde  <kirit@felspar.com>
 Allow time stamps and time differences to be added and subtracted.

2012-07-21  Kirit Saelensminde  <kirit@felspar.com>
 Made time stamps comparable and also added in a new timediff implementation based on the Boost library version.

2012-07-02  Kirit Saelensminde  <kirit@felspar.com>
 Silenced a clang warning that turns up under some circumstances.

2012-06-30  Kirit Saelensminde  <kirit@felspar.com>
 Added configuration for the log level for the stdout global logger.

2012-05-26  Kirit Saelensminde  <kirit@felspar.com>
 Changed the logging DSL for logging JSON objects thanks to suggestions from jeroen Vermeulen.

2012-04-16  Kirit Saelensminde  <kirit@felspar.com>