@@ -154,9 +154,8 @@ namespace fostlib {
     /// Wrapper for boost::spirit::parse which forces serialisation of the parsing taking a previously acquired lock
     template<typename C, typename D> inline
     boost::spirit::parse_info<C> parse(
-            parser_lock &lock,
-            C s, const boost::spirit::parser<D> &p) {
-        parser_lock();
+        parser_lock &, C s, const boost::spirit::parser<D> &p
+    ) {
         return boost::spirit::parse(s, p);
     }
 
